<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.com.cs478proj1.AboutActivity">



    <TextView
        android:text="@string/author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:id="@+id/authorTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <TextView
        android:text="@string/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/versionTextView"
        android:layout_below="@+id/authorTextView"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <TextView
        android:text="@string/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTextView"
        android:layout_below="@+id/versionTextView"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dateTextView">

        <TextView
            android:id="@+id/projectDescriptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/project_description_text"/>

    </ScrollView>

</RelativeLayout>
