<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.com.cs478proj1.MainActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/dialerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/androidDocsButton"
        android:layout_alignLeft="@+id/androidDocsButton"
        android:layout_alignRight="@+id/androidDocsButton"
        android:layout_alignStart="@+id/androidDocsButton"
        android:layout_below="@+id/welcomeMessage"
        android:layout_marginTop="79dp"
        android:text="@string/dialer"
        android:onClick="openDialer"/>

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="33dp"
        android:id="@+id/statusTextView" />

    <Button
        android:id="@+id/androidDocsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_docs"
        android:onClick="openAndroidDocs"
        android:layout_above="@+id/statusTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
